tests/semantic_errors/line_out_of_bounds.draw
LINE(-10, 50, 300, 100) COLOR red WIDTH 2;
